# JeuDeTaquin

./: CMakeLists.txt  CMakePresets.json  README.md
Docs/: Doxyfile  Flowchart JeuDeTaquin main.drawio
JeuDeTaquin/: BatchRunners.c  BatchRunners.h  CMakeLists.txt  Exceptions.c  Exceptions.h  JeuDeTaquin.c  JeuDeTaquin.cpp  JeuDeTaquin.h  MultithreadHelper.c  MultithreadHelper.h  UserInput.c  UserInput.h  UserInputStruct.h  notes.txt
JeuDeTaquin/ArrayAnalyze/: ArrayAnalyze.c  ArrayAnalyze.h  filename.txt  main.c
JeuDeTaquin/ArrayGen/: RandomSetStruct.h  TableauGen.c  TableauGen.h  TableauStructure.c  TableauStructure.h  test.c
JeuDeTaquin/Graph/: Color.c  Graph.c  Graph.h  GraphItem.h
JeuDeTaquin/Helpers/: BatchRunners.c  BatchRunners.h  Clock.c  Clock.h  Exceptions.c  Exceptions.h  ManagmentRequirements.h  MultithreadHelper.c  MultithreadHelper.h  ProjectRequirements.h  UserInput.c  UserInput.h  UserInputStruct.h  Version.h
JeuDeTaquin/Helpers/BatchRunners/: Analyze.c  Analyze.h  Generate.c  Generate.h  GenerateData.h  Load.c  Load.h  Save.c  Save.h  SaveData.h
